// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip styled components StyledArrow - basic render: StyledArrow has correct styles 1`] = `
Object {
  "backgroundColor": "$theme.tooltip.backgroundColor",
  "boxShadow": "$theme.lighting.shadow600",
  "height": "9px",
  "left": "10px",
  "position": "absolute",
  "top": "-4px",
  "transform": "rotate(45deg)",
  "width": "9px",
  "zIndex": 1,
}
`;

exports[`Tooltip styled components StyledBody - basic render: StyledBody has correct styles when closed 1`] = `
Object {
  "backgroundColor": "$theme.tooltip.backgroundColor",
  "borderRadius": "$theme.borders.radius200",
  "boxShadow": "$theme.lighting.shadow400",
  "color": "$theme.colors.mono100",
  "left": 0,
  "marginTop": "6px",
  "opacity": 0,
  "position": "absolute",
  "top": 0,
  "transform": "translate3d(0px, 0px, 0)",
  "transitionDuration": "0s",
  "transitionProperty": "opacity",
  "transitionTimingFunction": "$theme.animation.easeInCurve",
  "zIndex": 1050,
}
`;

exports[`Tooltip styled components StyledBody - basic render: StyledBody has correct styles when open and animating 1`] = `
Object {
  "backgroundColor": "$theme.tooltip.backgroundColor",
  "borderRadius": "$theme.borders.radius200",
  "boxShadow": "$theme.lighting.shadow400",
  "color": "$theme.colors.mono100",
  "left": 0,
  "marginTop": "6px",
  "opacity": 1,
  "position": "absolute",
  "top": 0,
  "transform": "translate3d(100px, 100px, 0)",
  "transitionDuration": "0.1s",
  "transitionProperty": "opacity",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "zIndex": 1050,
}
`;

exports[`Tooltip styled components StyledInner - basic render: StyledInner has correct styles 1`] = `
Object {
  "backgroundColor": "$theme.tooltip.backgroundColor",
  "borderRadius": "$theme.borders.radius200",
  "color": "$theme.colors.foreground",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "paddingBottom": "$theme.sizing.scale300",
  "paddingLeft": "$theme.sizing.scale300",
  "paddingRight": "$theme.sizing.scale300",
  "paddingTop": "$theme.sizing.scale300",
  "position": "relative",
  "zIndex": 2,
}
`;
